Fixed stuck pen, added plr names to story rollout

--- a/Client/game.css
+++ b/Client/game.css
@@ -6,6 +6,7 @@
     display: none;
 }
 
-.view-visible {
-    display: inline;
+.pen-column {
+    padding-right: 50px;
+    padding-left: 0px;
 }
